2011-02-14  Dirk Pranke  <dpranke@chromium.org>

        Unreviewed, build fix.

        Fix minor regression introduced in r78522. For some reason, Python
        provides a platform.mac_ver() routine on Linux, so we need to
        check to make sure it's returning something in addition to
        checking for its existence.

        * Scripts/webkitpy/layout_tests/port/mac.py:

2011-02-14  Dirk Pranke  <dpranke@chromium.org>

        Reviewed by Mihai Parparita.

        Clean up the way we handle platform names in
        new-run-webkit-tests. Previously, if you specified
        '--platform mac' or '--platform chromium-mac' on the command
        line, it would use that platform name to determine baseline search
        paths, etc. This is almost never the right thing to do, because
        it ignores the existence of version-specific baselines.
        
        So, I changed this so that ports that support versions must
        always use a version, and the version should default to the
        version of the operating system that the port is being run on
        (e.g., if you're running on Leopard, then passing '--platform
        mac' will default to the 'mac-leopard' port). This means that
        port.name() should always include a version-specific suffix if
        the port supports versions.

        However, we still support things like '--platform mac' as input
        so that the user doesn't have to explicitly specify a version,
        both for convenience and so we don't have to make buildbot
        configs more complicated than they already are.

        Also, I cleaned up how the baselines were being searched
        on the chromium-mac port (this is one of the two bugs that
        prompted this refactoring), and made the logic easier to follow
        and more consistent across the mac and chromium ports
        
        Lastly, I added a port.get_all_names() method that could be used