@@ -1,3 +1,13 @@
+2011-02-15  David Levin  <levin@chromium.org>
+
+        Reviewed by Shinichiro Hamaji.
+
+        check-webkit-style should do some detection for valid uses of WEBKIT_API (in chromium public api).
+        https://bugs.webkit.org/show_bug.cgi?id=52271
+
+        * Scripts/webkitpy/style/checkers/cpp.py: Added the check for WEBKIT_API usage.
+        * Scripts/webkitpy/style/checkers/cpp_unittest.py: Added tests.
+
 2011-02-14  Dirk Pranke  <dpranke@chromium.org>
 
         Unreviewed, build fix.
